Fix: Final center alignment for footer on mobile

--- a/wp-content/themes/elena/assets/css/main.css
+++ b/wp-content/themes/elena/assets/css/main.css
@@ -1452,11 +1452,19 @@ button {
         max-width: 150px;
     }
 
+    .elena-footer-col {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .elena-social-links {
         justify-content: center;
     }
 
     .elena-footer-contact ul {
+        display: flex;
+        flex-direction: column;
         align-items: center;
     }
 
